dev-ahmadou-3-typewriter-added

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
+    "typewriter-effect": "^2.20.1",
     "zustand": "^4.4.1"
   }
 }
