--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-slick": "^0.29.0",
     "react-use": "^17.4.0",
     "tailwindcss": "3.3.3",
+    "truncate-eth-address": "^1.0.2",
+    "truncate-ethereum-address": "^0.3.0",
     "typewriter-effect": "^2.20.1",
     "viem": "^1.9.2",
     "wagmi": "^1.3.10",
